# Aerial-Resource-Scheduler

./: .gitignore  AmplInputParser.cpp  AmplInputParser.h  CMakeLists.txt  Grasp.h  IInputParser.h  Instance.h  InstanceConverter.h  Matrix.h  Optimal.h  Parameters.h  ParametersConverter.h  README.md  RawInputParser.cpp  RawInputParser.h  Schedule.h  Statistics.h  main.cpp
Implementation/: .gitignore  input-ampl-example.txt  input-simple-example.txt
Implementation/scripts/: extract_durations.py  generate_summary.py  run_heur.py  select_better.py  summary_to_table.py
Implementation/src/: CMakeLists.txt  Grasp.h  Greedy.h  Instance.h  InstanceConverter.h  LocalSearch.h  Matrix.h  Objective.h  Optimal.h  Parameters.h  Schedule.cpp  Schedule.h  Statistics.h  Takeoff.h  main.cpp
Implementation/src/input_parser/: AmplInputParser.cpp  InputParserFactory.h  InstanceRaw.h  RawInputParser.cpp
Paper/: fer.cls  literature.bib  master.tex
Paper/content/: abstract.tex  conclusion.tex  example-input-file-ampl.tex  example-input-file-simple.tex  example-output-file.tex  future-work.tex  heuristic.tex  implementation.tex  introduction.tex  problem-definition.tex  related-work.tex  results-table-greedy-ls-50.tex  results-table-h-ilp-15.tex  results-table-h-ilp-25.tex  results-table-h-ilp-50.tex  results-table-h-ilp-extended.tex  results-table-time.tex  results.tex  test-scenarios.tex
TestScenarios/output-ilp/ilp-2h/: K07_F02_NUOF_IA_15_I05.out  K07_F02_NUOF_IA_25_I05.out  K07_F02_NUOF_IA_50_I02.out  K07_F02_NUOF_MUOT_15_I01.out  K07_F02_NUOF_MUOT_15_I02.out  K07_F02_NUOF_MUOT_15_I05.out  K07_F02_NUOF_MUOT_50_I01.out  K07_F02_NUOF_MUOT_50_I03.out  K07_F02_UOF_IA_25_I02.out  K07_F02_UOF_IA_25_I05.out  K07_F02_UOF_MUOT_25_I01.out  K07_F02_UOF_MUOT_50_I01.out  K10_F03_NUOF_IA_15_I05.out  K10_F03_NUOF_IA_25_I03.out  K10_F03_NUOF_IA_50_I01.out  K10_F03_NUOF_MUOT_15_I01.out  K10_F03_NUOF_MUOT_15_I02.out  K10_F03_NUOF_MUOT_25_I02.out  K10_F03_NUOF_MUOT_25_I05.out  K10_F03_NUOF_MUOT_50_I01.out  K10_F03_UOF_IA_15_I01.out  K10_F03_UOF_IA_15_I03.out  K10_F03_UOF_IA_15_I04.out  K10_F03_UOF_IA_25_I03.out  K10_F03_UOF_IA_25_I04.out  K10_F03_UOF_IA_25_I05.out  K10_F03_UOF_MUOT_15_I04.out  K10_F03_UOF_MUOT_50_I02.out  K10_F03_UOF_MUOT_50_I03.out  K15_F03_NUOF_IA_15_I02.out  K15_F03_NUOF_IA_15_I04.out  K15_F03_NUOF_IA_25_I05.out  K15_F03_NUOF_IA_50_I02.out  K15_F03_NUOF_IA_50_I03.out  K15_F03_NUOF_MUOT_15_I01.out  K15_F03_NUOF_MUOT_15_I03.out  K15_F03_NUOF_MUOT_50_I05.out  K15_F03_UOF_IA_15_I01.out  K15_F03_UOF_IA_15_I03.out  K15_F03_UOF_IA_25_I03.out  (+89 more)
TestScenarios/output-ilp/ilp-6h/: K15_F03_UOF_MUOT_50_I02.out  K20_F04_NUOF_MUOT_15_I04.out  K25_F04_UOF_MUOT_15_I01.out  K30_F05_UOF_IA_50_I02.out
TestScenarios/output-with-DFS/heur-better-v1-v2/: K07_F02_NUOF_IA_25_I01.out  K07_F02_NUOF_MUOT_15_I03.out  K07_F02_UOF_IA_50_I02.out  K07_F02_UOF_IA_50_I03.out  (+40 more)
input_parser/: AmplInputParser.cpp  AmplInputParser.h  IInputParser.h  InputParserFactory.h  InstanceRaw.h  ParametersRaw.h  RawInputParser.cpp  RawInputParser.h
src/: InputFormat.h
src/input_parser/: RawInputParser.cpp
(+22263 files in other folders)
